--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header a:hover {
   background-color: antiquewhite;
   color: #ffffff;
   height: 100vh;
-  background-image: url("images/beach-1.jpg");
+  background-image: url("image/cover.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
